--- a/oko_project/bitrix_calc/templates/calculation_list.html
+++ b/oko_project/bitrix_calc/templates/calculation_list.html
@@ -149,6 +149,7 @@
                 BX24.init(() => {
                     if (BX24.placement && BX24.placement.info().placement === 'CRM_DEAL_DETAIL_TAB') {
                         const dealId = BX24.placement.info().options.ID;
+                        dealId = str(dealId)
                         if (!dealId) {
                             console.error("Не удалось получить ID сделки.");
                             return;
