--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -659,7 +659,7 @@ function createAuthorizationModal(message, authorizationUrl) {
 }
 
 
-document.getElementById('getUserNameButton').addEventListener('click', getUserCurrent);
+// document.getElementById('getUserNameButton').addEventListener('click', getUserCurrent);
 
 function filterClients() {
         const searchValue = document.getElementById("clientSearch").value.toLowerCase();
