--- a/oko_project/bitrix_calc/templates/calculation_list.html
+++ b/oko_project/bitrix_calc/templates/calculation_list.html
@@ -100,6 +100,7 @@
             background-color: #c82333;
         }
     </style>
+    <script src="https://api.bitrix24.com/api/v1/"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         function getCookie(name) {
@@ -135,7 +136,7 @@
             }
 
             initializeBitrix24();
-            
+
             const container = document.querySelector(".container");
             const initialContent = container.innerHTML;
 
