--- a/oko_project/bitrix_calc/templates/calculation_list.html
+++ b/oko_project/bitrix_calc/templates/calculation_list.html
@@ -149,7 +149,7 @@
             }
 
             function loadCalculations(dealId) {
-                fetch(`/calculation_list`, {
+                fetch(`calculation_list`, {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json",
