--- a/oko_project/bitrix_calc/templates/calculation_list.html
+++ b/oko_project/bitrix_calc/templates/calculation_list.html
@@ -205,6 +205,7 @@
                         "Content-Type": "application/json",
                         "X-CSRFToken": getCookie("csrftoken"),
                     },
+                    body: JSON.stringify({ _method: "DELETE" }),
                 })
                 .then(response => response.json())
                 .then(data => {
