--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -166,6 +166,7 @@
     <div class="item-list">
         <h4>{{goods_compositions_data}}</h4>
         <h4>{{parameters_data}}</h4>
+        <h4>{{first_good}}</h4>
         <h3>Список изделий {{calc_number}}</h3>
         <ul id="productList">
             {% for good in goods %}
