--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -777,6 +777,7 @@ function filterClients() {
 }
 
     document.addEventListener("DOMContentLoaded", () => {
+        console.log({{first_good}})
         function getDealIdFromParent() {
             // Проверяем доступность Bitrix24 JS API
             if (typeof BX24 !== 'undefined' && BX24.placement) {
